--- a/Website/Views/Reports/ReportView.cshtml
+++ b/Website/Views/Reports/ReportView.cshtml
@@ -30,6 +30,7 @@
                 @Model.Commentary
             </div>
         </div>
-        <button class="report_close">Закрыть</button>
+        <button class="report-close">Закрыть жалобу</button>
+        <button class="report-close-delete">Удалить пост и закрыть жалобу</button>
     </div>
 </li>
