--- a/Website/wwwroot/Resources/css/auth.css
+++ b/Website/wwwroot/Resources/css/auth.css
@@ -233,7 +233,7 @@ h4 {
 .profile_img {
     width: 120px;
     padding: 10px;
-    background: #555;
+    background: white;i
     border-radius: 20px;
     margin: 20px 0;
 }
