--- a/Website/wwwroot/Resources/css/profile.css
+++ b/Website/wwwroot/Resources/css/profile.css
@@ -11,7 +11,7 @@
 .user_profile {
     width: inherit;
     /* position: sticky; */
-    height: 220px;
+    /*height: 220px;*/
     transition: .5s linear;
     display: flex;
     gap: 20px;
@@ -27,11 +27,24 @@
 .profile_logo {
     border-radius: 20px;
     background-color: var(--light-main-background-color);
+    /*max-height: 220px;*/
+    /*width: min-content;*/
+    padding: 10px;
+    transition: .5s linear;
+    position: relative;
+    max-width: 220px;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    /*border-radius: 20px;
+    background-color: var(--light-main-background-color);
     height: 100%;
     box-sizing: border-box;
     padding: 10px;
     transition: .5s linear;
-    position: relative;
+    position: relative;*/
 }
 
 .profile_logo-collapsed {
@@ -40,9 +53,20 @@
 }
 
 .profile_img {
-    border-radius: 25px;
+    border-radius: 14px;
     height: 100%;
     transition: .5s linear;
+    background: white;
+    padding: 4px;
+    max-height: 220px;
+    max-width: 220px;
+    width: 100%;
+    object-fit: cover;
+    /*border-radius: 25px;
+    height: 100%;
+    transition: .5s linear;
+    background: white;
+    padding: 4px;*/
 }
 
 .profile_img-collapsed {
@@ -137,7 +161,7 @@
     width: 100%;
     border-radius: 12px;
     transition: .5s linear;
-    display: flex;
+    /*display: flex;*/
     padding: 10px;
     color: gray;
     fill: gray;
@@ -264,4 +288,49 @@
 }
 #upload_btn:hover {
     opacity: 1;
+}
+
+.profile_mail {
+    white-space: nowrap;
+    background: #e8e8e8;
+    width: min-content;
+    padding: 4px 8px;
+    border-radius: 10px;
+    /*margin-bottom: 10px;*/
+    color: #686868;
+    border: 1px var(--border-main-color) solid;
+}
+
+.day {
+    display: flex;
+    max-width: 100%;
+    margin: 0;
+    white-space: nowrap;
+    color: gray;
+    opacity: .5;
+}
+
+.day:before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: gray;
+    margin: auto 10px auto 0;
+    opacity: .5;
+}
+
+.day:after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: gray;
+    margin: auto 0 auto 10px;
+    opacity: .5;
+}
+.del {
+    color: #000;
+    background: #ddd;
+    padding: 4px 8px;
+    border-radius: 8px;
+    border: 1px var(--border-main-color) solid;
 }
