--- a/Website/Views/Reports/Reports.cshtml
+++ b/Website/Views/Reports/Reports.cshtml
@@ -8,7 +8,7 @@
         <input id="ui_reports_search_input" class="ui_control_item" type="text" placeholder="Искать">
     </div>
 </div>
-<ul class="reports">
+<ul id="reports" class="reports">
     @if (!Model.Any())
     {
         <li class="report no-reports">
@@ -25,3 +25,8 @@
         }
     }
 </ul>
+<script>
+    $(document).ready(function () {
+        var reports = do
+    });
+</script>
