--- a/Website/Views/Shared/UserPostView.cshtml
+++ b/Website/Views/Shared/UserPostView.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Database.DAL.Entities.UserPost
-@using static Website.Infrastructure.Converters.TimeOfAdditionConverter
 @using Website.Infrastructure.Extensions
 @{
     bool isOwner = Context.GetConnectedUserId()==Model.OwnerId.ToString();
@@ -46,11 +45,24 @@
             </div>*@
     </div>
     <div class="post_header">
-        <div class="post_owner">
-            <a href="/profile?id=@Model.OwnerId">
-                @Model.Owner.Name
-            </a>
-        </div>
+        <a href="/profile?id=@Model.OwnerId">
+            <div class="post_owner">
+                <div class="post_owner_icon_container">
+                    @if (string.IsNullOrEmpty(Model.Owner.AvatarPath))
+                    {
+                        <svg class="owner_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                            <path d="M 15 3 C 11.686 3 9 5.686 9 9 L 9 10 C 9 13.314 11.686 16 15 16 C 18.314 16 21 13.314 21 10 L 21 9 C 21 5.686 18.314 3 15 3 z M 14.998047 19 C 10.992047 19 5.8520469 21.166844 4.3730469 23.089844 C 3.4590469 24.278844 4.329125 26 5.828125 26 L 24.169922 26 C 25.668922 26 26.539 24.278844 25.625 23.089844 C 24.146 21.167844 19.004047 19 14.998047 19 z">
+                            </path>
+                        </svg>
+                    }
+                    else
+                    {
+                        <img class="owner_icon"   src="@Model.Owner.AvatarPath"/>
+                    }
+                </div>
+                <span class="post_owner_name">@Model.Owner.Name</span>
+            </div>
+        </a>
     </div>
     @if (!String.IsNullOrWhiteSpace(Model.Title))
     {
@@ -61,6 +73,6 @@
         @Model.Description
     </div>
     <div class="post_time">
-        @Convert(Model.CreatedDateTime)
+        @Model.CreatedDateTime.ToLastMessageReceive()
     </div>
 </li>
