--- a/Website/wwwroot/Resources/css/style.css
+++ b/Website/wwwroot/Resources/css/style.css
@@ -11,6 +11,7 @@
     --border-hover-gray-color: rgb(220, 220, 220);
     --field-focus-dark-color: rgb(136, 136, 136);
     --light-main-background-color: rgba(242,242,242,1);
+    --border-main-color: #e1e1e1;
 }
 * {
     /*font-family: 'Nunito', sans-serif;*/
@@ -88,6 +89,7 @@ a {
     transition: .2s ease;
     margin-bottom: 20px;
     box-sizing: border-box;
+    position: relative;
 }
 /* .side_bar_menu_item::after{
     display: inline-flex;
@@ -130,6 +132,7 @@ a {
 .side_bar_menu_icon{
     display: inline-flex;
     margin: auto 0 auto 0;
+    position: relative;
 }
 .side_bar_menu_item_title{
     margin: auto auto auto 9px
@@ -332,4 +335,81 @@ a {
     align-items: center;
     display: flex;
     width: min-content;
+}
+
+.notifications_container {
+    position: fixed;
+    right: 0;
+    height: 100%;
+    width: 400px;
+    display: flex;
+    flex-flow: column-reverse;
+    padding: 10px;
+}
+.notification {
+    display: flex;
+    height: 40px;
+    border-radius: 12px;
+    align-items: center;
+    padding: 8px;
+    transition: .1s linear;
+    cursor: pointer;
+    border: 1px transparent solid;
+    gap: 10px;
+    background: var(--light-main-background-color)
+}
+.notification_icon_container {
+    height: 100%;
+    border-radius: 6px;
+    background: rgb(180, 180, 180);
+    overflow: hidden;
+}
+.sender_icon {
+    height: 100%;
+    fill: var(--light-main-background-color);
+}
+.notification_sender_link {
+    height: 100%;
+    display: flex;
+}
+
+.new_message {
+    position: absolute;
+    font-size: 12px;
+    background: #ff6767;
+    color: var(--light-main-background-color);
+    border-radius: 100%;
+    height: 20px;
+    width: 20px;
+    padding-bottom: 2px;
+    animation: animateShow .2s linear;
+    right: -10px;
+    top: -10px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
+    transition: .2s linear;
+}
+@keyframes animateShow {
+    0% {
+        width: 0;
+        height: 0;
+        right: 0;
+        top: 0;
+        font-size: 0;
+    }
+    100% {
+        width: 20px;
+        height: 20px;
+        right: -10px;
+        top: -10px;
+        font-size: 12px;
+    }
+
+}
+.hidden {
+    overflow: hidden;
+    visibility: collapse;
 }
