Чистка кода Profile, логика Reports

--- a/Website/Views/Reports/Reports.cshtml
+++ b/Website/Views/Reports/Reports.cshtml
@@ -26,7 +26,12 @@
     }
 </ul>
 <script>
-    $(document).ready(function () {
-        var reports = do
-    });
+    //$.(document).ready(function () {
+    //    var reports = document.getElementById('reports');
+    //    reports.forEach(report=>() => {
+    //        var deleteReport = report.querySelector('.report-close');
+    //        if (deleteReport) {
+    //        }
+    //    })
+    //});
 </script>
