--- a/Website/Views/Guide/GuideLayout.cshtml
+++ b/Website/Views/Guide/GuideLayout.cshtml
@@ -3,8 +3,7 @@
 <head>
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" />
-    <link rel="stylesheet" href="~/Resources/css/ui.css" />
-    <link rel="stylesheet" href="~/Resources/css/style.css" />
+    <link rel="stylesheet" href="~/Resources/css/guide.css" />
 </head>
 <body>
     <div id="page_layout">
