--- a/Website/Views/Friends/FriendsIncoming.cshtml
+++ b/Website/Views/Friends/FriendsIncoming.cshtml
@@ -19,10 +19,10 @@
     </div>
 
     <div class="friends_links">
-        <a class="ui_control_item ui_btn ui_btn-selected" href="/friends">
+        <a class="ui_control_item ui_btn" href="/friends">
             Друзья
         </a>
-        <a class="ui_control_item ui_btn" href="/friends/incoming">
+        <a class="ui_control_item ui_btn ui_btn-selected" href="/friends/incoming">
             Входящие заявки
         </a>
         <a class="ui_control_item ui_btn" href="/friends/outgoing">
