--- a/Website/Views/Friends/FriendsOutgoing.cshtml
+++ b/Website/Views/Friends/FriendsOutgoing.cshtml
@@ -19,13 +19,13 @@
     </div>
 
     <div class="friends_links">
-        <a class="ui_control_item ui_btn ui_btn-selected" href="/friends">
+        <a class="ui_control_item ui_btn" href="/friends">
             Друзья
         </a>
         <a class="ui_control_item ui_btn" href="/friends/incoming">
             Входящие заявки
         </a>
-        <a class="ui_control_item ui_btn" href="/friends/outgoing">
+        <a class="ui_control_item ui_btn ui_btn-selected" href="/friends/outgoing">
             Исходящие заявки
         </a>
     </div>
