--- a/Website/Views/Messenger/Base/MessageView.cshtml
+++ b/Website/Views/Messenger/Base/MessageView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Database.DAL.Entities.Messages.ChatMessage.GeneratedChatMessage
+﻿@model Website.ViewModels.Messenger.Preview.Base.MessageViewModel
 @{
     Layout = null;
 }
