--- a/Website/Views/Shared/PostsView.cshtml
+++ b/Website/Views/Shared/PostsView.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Database.DAL.Entities.Post>
+﻿@model IEnumerable<Website.ViewModels.Profile.PostViewModel>
 @{
     Layout = null;
 }
