--- a/Website/Views/Messenger/PrivateChat/PrivateChatHistoryView.cshtml
+++ b/Website/Views/Messenger/PrivateChat/PrivateChatHistoryView.cshtml
@@ -1,4 +1,4 @@
-﻿@using Database.DAL.Entities.Messages.ChatMessage
+﻿@using Website.ViewModels.Messenger.Preview.Base
 @model Website.ViewModels.Messenger.ChatViewModel
 @{
     Layout = null;
@@ -29,10 +29,10 @@ else foreach (var message in Model.History)
             day = lastDay + 1 == now ? "Вчера" : message.CreatedDateTime.ToString("M");
                 
         }
-        if (message is ParticipantChatMessage userMessage)
+        if (message is UserMessageViewModel userMessage)
             await Html.RenderPartialAsync("PrivateChat/PrivateChatMessageView", userMessage, ViewData);
-        else if (message is GeneratedChatMessage generatedMessage)
-            await Html.RenderPartialAsync("Base/MessageView", generatedMessage);
+        else
+            await Html.RenderPartialAsync("Base/MessageView", message);
 
 
 
