--- a/Website/Views/Shared/UserPostView.cshtml
+++ b/Website/Views/Shared/UserPostView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Database.DAL.Entities.UserPost
+﻿@model Website.ViewModels.UserPostViewModel
 @using Website.Infrastructure.Extensions
 @{
     bool isOwner = Context.GetConnectedUserId()==Model.OwnerId.ToString();
