--- a/Website/Views/Friends/FriendView.cshtml
+++ b/Website/Views/Friends/FriendView.cshtml
@@ -32,24 +32,21 @@
                 </div>
                 
                 <form asp-action="TryRemoveFriendship">
-                    <input name="userId" type="hidden" value="@Context.GetConnectedUserId()" />
-                    <input name="targetUserId" type="hidden" value="@Model.Id" />
+                    <input name="target" type="hidden" value="@Model.Id" />
                     <input type="submit" value="Удалить из друзей" />
                 </form>
             }
         @if (Model.ApplicationState == ApplicationState.incoming)
         {
             <form asp-action="AllowIncomingFriendship">
-                <input name="userId" type="hidden" value="@Context.GetConnectedUserId()" />
-                <input name="targetUserId" type="hidden" value="@Model.Id" />
+                <input name="target" type="hidden" value="@Model.Id" />
                 <input type="submit" value="Принять"/>
             </form>
         }
         @if (Model.ApplicationState == ApplicationState.outgoing)
         {
             <form asp-action="TryRemoveOutgoingFriendship">
-                <input name="userId" type="hidden" value="@Context.GetConnectedUserId()" />
-                <input name="targetUserId" type="hidden" value="@Model.Id" />
+                <input name="target" type="hidden" value="@Model.Id" />
                 <input type="submit" value="Отменить" />
             </form>
         }
