--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -11,27 +11,29 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Website</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" />
     <link rel="stylesheet" href="~/Resources/css/ui.css" />
     <link rel="stylesheet" href="~/Resources/css/style.css" />
     <link rel="stylesheet" href="~/Resources/css/scrollBar.css" />
     <link rel="stylesheet" href="~/Resources/css/modal.css" />
+    <script src="~/Resources/lib/jquery/dist/jquery.min.js"></script>
+    <script src="Resources/js/common.js"></script>
 </head>
 <body>
     <div id="notifications_wrap" class="notifications_container">
-            <div class="notification">
-                <a class="notification_sender_link" href="/profile">
-                    <div class="notification_icon_container">
-                        <svg class="sender_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
-                            <path d="M 15 3 C 11.686 3 9 5.686 9 9 L 9 10 C 9 13.314 11.686 16 15 16 C 18.314 16 21 13.314 21 10 L 21 9 C 21 5.686 18.314 3 15 3 z M 14.998047 19 C 10.992047 19 5.8520469 21.166844 4.3730469 23.089844 C 3.4590469 24.278844 4.329125 26 5.828125 26 L 24.169922 26 C 25.668922 26 26.539 24.278844 25.625 23.089844 C 24.146 21.167844 19.004047 19 14.998047 19 z">
-                            </path>
-                        </svg>
-                    </div>
-                    <div class="chat_receiver">
-                        Иван
-                    </div>
-                </a>
-            </div>
+        <div class="notification">
+            <a class="notification_sender_link" href="/profile">
+                <div class="notification_icon_container">
+                    <svg class="sender_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <path d="M 15 3 C 11.686 3 9 5.686 9 9 L 9 10 C 9 13.314 11.686 16 15 16 C 18.314 16 21 13.314 21 10 L 21 9 C 21 5.686 18.314 3 15 3 z M 14.998047 19 C 10.992047 19 5.8520469 21.166844 4.3730469 23.089844 C 3.4590469 24.278844 4.329125 26 5.828125 26 L 24.169922 26 C 25.668922 26 26.539 24.278844 25.625 23.089844 C 24.146 21.167844 19.004047 19 14.998047 19 z">
+                        </path>
+                    </svg>
+                </div>
+                <div class="chat_receiver">
+                    Иван
+                </div>
+            </a>
+        </div>
     </div>
     <div id="page_modal_wrap" class="modal_container">
         @*@if (Model is ProfileViewModel { IsNew: true })
@@ -126,46 +128,46 @@
                         </li>
                     }
                     <!--<li>
-    <a href="/working">
-        <div class="side_bar_menu_item ui_control_item" onclick="SetView(this)">
-            <div class="side_bar_menu_icon">
-                <svg fill="none" height="24" width="24" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><g clip-rule="evenodd" fill="currentColor" fill-rule="evenodd"><path d="M5 6.75c0-.41.34-.75.75-.75h8.5a.75.75 0 010 1.5h-8.5A.75.75 0 015 6.75zM5 10.25c0-.41.34-.75.75-.75h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 01-.75-.75z"></path><path d="M7.13 2c-1.61 0-2.34.14-3.08.53-.65.35-1.17.87-1.52 1.52-.4.74-.53 1.47-.53 3.08v5.74c0 1.61.14 2.34.53 3.08.35.65.87 1.17 1.52 1.52.74.4 1.47.53 3.08.53h5.74c1.61 0 2.34-.14 3.08-.53a3.64 3.64 0 001.52-1.52c.4-.74.53-1.47.53-3.08V7.13c0-1.61-.14-2.34-.53-3.08a3.64 3.64 0 00-1.52-1.52c-.74-.4-1.47-.53-3.08-.53zM4.75 3.86c.42-.22.85-.36 2.38-.36h5.74c1.53 0 1.96.14 2.38.36.38.2.69.5.9.9.21.4.35.84.35 2.37v5.74c0 1.53-.14 1.96-.36 2.38-.2.38-.5.69-.9.9-.34.18-.7.3-1.74.34v-2.74a.75.75 0 00-1.5 0v2.75H8v-2.75a.75.75 0 00-1.5 0v2.74c-1.03-.03-1.4-.16-1.75-.35-.38-.2-.69-.5-.9-.9-.21-.4-.35-.84-.35-2.37V7.13c0-1.53.14-1.96.36-2.38.2-.38.5-.69.9-.9zm1 2.14a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5zm0 3.5a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5z"></path></g></svg>
-            </div>-->
+                    <a href="/working">
+                        <div class="side_bar_menu_item ui_control_item" onclick="SetView(this)">
+                            <div class="side_bar_menu_icon">
+                                <svg fill="none" height="24" width="24" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><g clip-rule="evenodd" fill="currentColor" fill-rule="evenodd"><path d="M5 6.75c0-.41.34-.75.75-.75h8.5a.75.75 0 010 1.5h-8.5A.75.75 0 015 6.75zM5 10.25c0-.41.34-.75.75-.75h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 01-.75-.75z"></path><path d="M7.13 2c-1.61 0-2.34.14-3.08.53-.65.35-1.17.87-1.52 1.52-.4.74-.53 1.47-.53 3.08v5.74c0 1.61.14 2.34.53 3.08.35.65.87 1.17 1.52 1.52.74.4 1.47.53 3.08.53h5.74c1.61 0 2.34-.14 3.08-.53a3.64 3.64 0 001.52-1.52c.4-.74.53-1.47.53-3.08V7.13c0-1.61-.14-2.34-.53-3.08a3.64 3.64 0 00-1.52-1.52c-.74-.4-1.47-.53-3.08-.53zM4.75 3.86c.42-.22.85-.36 2.38-.36h5.74c1.53 0 1.96.14 2.38.36.38.2.69.5.9.9.21.4.35.84.35 2.37v5.74c0 1.53-.14 1.96-.36 2.38-.2.38-.5.69-.9.9-.34.18-.7.3-1.74.34v-2.74a.75.75 0 00-1.5 0v2.75H8v-2.75a.75.75 0 00-1.5 0v2.74c-1.03-.03-1.4-.16-1.75-.35-.38-.2-.69-.5-.9-.9-.21-.4-.35-.84-.35-2.37V7.13c0-1.53.14-1.96.36-2.38.2-.38.5-.69.9-.9zm1 2.14a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5zm0 3.5a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5z"></path></g></svg>
+                            </div>-->
                     @*<span class="side_bar_menu_item_title">О нас</span>*@
                     <!--</div>
-        </a>
-    </li>-->
+                        </a>
+                    </li>-->
                     <!--<li>
-    <a href="/working">
-        <div class="side_bar_menu_item ui_control_item" onclick="SetView(this)">
-            <div class="side_bar_menu_icon">
-                <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="24" height="24"><path fill=currentColor d="M 24 4 C 22.423103 4 20.902664 4.1994284 19.451172 4.5371094 A 1.50015 1.50015 0 0 0 18.300781 5.8359375 L 17.982422 8.7382812 C 17.878304 9.6893592 17.328913 10.530853 16.5 11.009766 C 15.672739 11.487724 14.66862 11.540667 13.792969 11.15625 L 13.791016 11.15625 L 11.125 9.9824219 A 1.50015 1.50015 0 0 0 9.4257812 10.330078 C 7.3532865 12.539588 5.7626807 15.215064 4.859375 18.201172 A 1.50015 1.50015 0 0 0 5.4082031 19.845703 L 7.7734375 21.580078 C 8.5457929 22.147918 9 23.042801 9 24 C 9 24.95771 8.5458041 25.853342 7.7734375 26.419922 L 5.4082031 28.152344 A 1.50015 1.50015 0 0 0 4.859375 29.796875 C 5.7625845 32.782665 7.3519262 35.460112 9.4257812 37.669922 A 1.50015 1.50015 0 0 0 11.125 38.015625 L 13.791016 36.841797 C 14.667094 36.456509 15.672169 36.511947 16.5 36.990234 C 17.328913 37.469147 17.878304 38.310641 17.982422 39.261719 L 18.300781 42.164062 A 1.50015 1.50015 0 0 0 19.449219 43.460938 C 20.901371 43.799844 22.423103 44 24 44 C 25.576897 44 27.097336 43.800572 28.548828 43.462891 A 1.50015 1.50015 0 0 0 29.699219 42.164062 L 30.017578 39.261719 C 30.121696 38.310641 30.671087 37.469147 31.5 36.990234 C 32.327261 36.512276 33.33138 36.45738 34.207031 36.841797 L 36.875 38.015625 A 1.50015 1.50015 0 0 0 38.574219 37.669922 C 40.646713 35.460412 42.237319 32.782983 43.140625 29.796875 A 1.50015 1.50015 0 0 0 42.591797 28.152344 L 40.226562 26.419922 C 39.454197 25.853342 39 24.95771 39 24 C 39 23.04229 39.454197 22.146658 40.226562 21.580078 L 42.591797 19.847656 A 1.50015 1.50015 0 0 0 43.140625 18.203125 C 42.237319 15.217017 40.646713 12.539588 38.574219 10.330078 A 1.50015 1.50015 0 0 0 36.875 9.984375 L 34.207031 11.158203 C 33.33138 11.54262 32.327261 11.487724 31.5 11.009766 C 30.671087 10.530853 30.121696 9.6893592 30.017578 8.7382812 L 29.699219 5.8359375 A 1.50015 1.50015 0 0 0 28.550781 4.5390625 C 27.098629 4.2001555 25.576897 4 24 4 z M 24 7 C 24.974302 7 25.90992 7.1748796 26.847656 7.3398438 L 27.035156 9.0644531 C 27.243038 10.963375 28.346913 12.652335 30 13.607422 C 31.654169 14.563134 33.668094 14.673009 35.416016 13.904297 L 37.001953 13.207031 C 38.219788 14.669402 39.183985 16.321182 39.857422 18.130859 L 38.451172 19.162109 C 36.911538 20.291529 36 22.08971 36 24 C 36 25.91029 36.911538 27.708471 38.451172 28.837891 L 39.857422 29.869141 C 39.183985 31.678818 38.219788 33.330598 37.001953 34.792969 L 35.416016 34.095703 C 33.668094 33.326991 31.654169 33.436866 30 34.392578 C 28.346913 35.347665 27.243038 37.036625 27.035156 38.935547 L 26.847656 40.660156 C 25.910002 40.82466 24.973817 41 24 41 C 23.025698 41 22.09008 40.82512 21.152344 40.660156 L 20.964844 38.935547 C 20.756962 37.036625 19.653087 35.347665 18 34.392578 C 16.345831 33.436866 14.331906 33.326991 12.583984 34.095703 L 10.998047 34.792969 C 9.7799772 33.330806 8.8159425 31.678964 8.1425781 29.869141 L 9.5488281 28.837891 C 11.088462 27.708471 12 25.91029 12 24 C 12 22.08971 11.087719 20.290363 9.5488281 19.160156 L 8.1425781 18.128906 C 8.8163325 16.318532 9.7814501 14.667839 11 13.205078 L 12.583984 13.902344 C 14.331906 14.671056 16.345831 14.563134 18 13.607422 C 19.653087 12.652335 20.756962 10.963375 20.964844 9.0644531 L 21.152344 7.3398438 C 22.089998 7.1753403 23.026183 7 24 7 z M 24 16 C 19.599487 16 16 19.59949 16 24 C 16 28.40051 19.599487 32 24 32 C 28.400513 32 32 28.40051 32 24 C 32 19.59949 28.400513 16 24 16 z M 24 19 C 26.779194 19 29 21.220808 29 24 C 29 26.779192 26.779194 29 24 29 C 21.220806 29 19 26.779192 19 24 C 19 21.220808 21.220806 19 24 19 z" /></svg>
-            </div>-->
+                    <a href="/working">
+                        <div class="side_bar_menu_item ui_control_item" onclick="SetView(this)">
+                            <div class="side_bar_menu_icon">
+                                <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="24" height="24"><path fill=currentColor d="M 24 4 C 22.423103 4 20.902664 4.1994284 19.451172 4.5371094 A 1.50015 1.50015 0 0 0 18.300781 5.8359375 L 17.982422 8.7382812 C 17.878304 9.6893592 17.328913 10.530853 16.5 11.009766 C 15.672739 11.487724 14.66862 11.540667 13.792969 11.15625 L 13.791016 11.15625 L 11.125 9.9824219 A 1.50015 1.50015 0 0 0 9.4257812 10.330078 C 7.3532865 12.539588 5.7626807 15.215064 4.859375 18.201172 A 1.50015 1.50015 0 0 0 5.4082031 19.845703 L 7.7734375 21.580078 C 8.5457929 22.147918 9 23.042801 9 24 C 9 24.95771 8.5458041 25.853342 7.7734375 26.419922 L 5.4082031 28.152344 A 1.50015 1.50015 0 0 0 4.859375 29.796875 C 5.7625845 32.782665 7.3519262 35.460112 9.4257812 37.669922 A 1.50015 1.50015 0 0 0 11.125 38.015625 L 13.791016 36.841797 C 14.667094 36.456509 15.672169 36.511947 16.5 36.990234 C 17.328913 37.469147 17.878304 38.310641 17.982422 39.261719 L 18.300781 42.164062 A 1.50015 1.50015 0 0 0 19.449219 43.460938 C 20.901371 43.799844 22.423103 44 24 44 C 25.576897 44 27.097336 43.800572 28.548828 43.462891 A 1.50015 1.50015 0 0 0 29.699219 42.164062 L 30.017578 39.261719 C 30.121696 38.310641 30.671087 37.469147 31.5 36.990234 C 32.327261 36.512276 33.33138 36.45738 34.207031 36.841797 L 36.875 38.015625 A 1.50015 1.50015 0 0 0 38.574219 37.669922 C 40.646713 35.460412 42.237319 32.782983 43.140625 29.796875 A 1.50015 1.50015 0 0 0 42.591797 28.152344 L 40.226562 26.419922 C 39.454197 25.853342 39 24.95771 39 24 C 39 23.04229 39.454197 22.146658 40.226562 21.580078 L 42.591797 19.847656 A 1.50015 1.50015 0 0 0 43.140625 18.203125 C 42.237319 15.217017 40.646713 12.539588 38.574219 10.330078 A 1.50015 1.50015 0 0 0 36.875 9.984375 L 34.207031 11.158203 C 33.33138 11.54262 32.327261 11.487724 31.5 11.009766 C 30.671087 10.530853 30.121696 9.6893592 30.017578 8.7382812 L 29.699219 5.8359375 A 1.50015 1.50015 0 0 0 28.550781 4.5390625 C 27.098629 4.2001555 25.576897 4 24 4 z M 24 7 C 24.974302 7 25.90992 7.1748796 26.847656 7.3398438 L 27.035156 9.0644531 C 27.243038 10.963375 28.346913 12.652335 30 13.607422 C 31.654169 14.563134 33.668094 14.673009 35.416016 13.904297 L 37.001953 13.207031 C 38.219788 14.669402 39.183985 16.321182 39.857422 18.130859 L 38.451172 19.162109 C 36.911538 20.291529 36 22.08971 36 24 C 36 25.91029 36.911538 27.708471 38.451172 28.837891 L 39.857422 29.869141 C 39.183985 31.678818 38.219788 33.330598 37.001953 34.792969 L 35.416016 34.095703 C 33.668094 33.326991 31.654169 33.436866 30 34.392578 C 28.346913 35.347665 27.243038 37.036625 27.035156 38.935547 L 26.847656 40.660156 C 25.910002 40.82466 24.973817 41 24 41 C 23.025698 41 22.09008 40.82512 21.152344 40.660156 L 20.964844 38.935547 C 20.756962 37.036625 19.653087 35.347665 18 34.392578 C 16.345831 33.436866 14.331906 33.326991 12.583984 34.095703 L 10.998047 34.792969 C 9.7799772 33.330806 8.8159425 31.678964 8.1425781 29.869141 L 9.5488281 28.837891 C 11.088462 27.708471 12 25.91029 12 24 C 12 22.08971 11.087719 20.290363 9.5488281 19.160156 L 8.1425781 18.128906 C 8.8163325 16.318532 9.7814501 14.667839 11 13.205078 L 12.583984 13.902344 C 14.331906 14.671056 16.345831 14.563134 18 13.607422 C 19.653087 12.652335 20.756962 10.963375 20.964844 9.0644531 L 21.152344 7.3398438 C 22.089998 7.1753403 23.026183 7 24 7 z M 24 16 C 19.599487 16 16 19.59949 16 24 C 16 28.40051 19.599487 32 24 32 C 28.400513 32 32 28.40051 32 24 C 32 19.59949 28.400513 16 24 16 z M 24 19 C 26.779194 19 29 21.220808 29 24 C 29 26.779192 26.779194 29 24 29 C 21.220806 29 19 26.779192 19 24 C 19 21.220808 21.220806 19 24 19 z" /></svg>
+                            </div>-->
                     @*<span class="side_bar_menu_item_title">Настройки</span>*@
                     <!--</div>
-        </a>
-    </li>-->
+                        </a>
+                    </li>-->
                     <!--<li>
-    <div id="sidebar_expander" class="side_bar_menu_item sidebar_expander-expanded  ui_control_item" onclick="SwitchSideBarView()">
-        <div class="side_bar_menu_icon">
-            <input checked="true" id="sidebar_checkbox" type="checkbox">
-            <svg width=19 fill=none xmlns="http://www.w3.org/2000/svg" viewBox="-3 0 54.53 55.26">
-                <defs>
-                    <style>
-                        .cls-1 {
-                            fill: none;
-                            stroke: #000;
-                            stroke-miterlimit: 10;
-                            stroke-width: 4px;
-                        }
-                    </style>
-                </defs>
-                <g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path d="M52.11,4.21c1-2,.18-2.77-1.79-1.79L3.48,25.84c-2,1-2,2.6,0,3.58L50.32,52.84c2,1,2.77.18,1.79-1.79L42.19,31.21a9,9,0,0,1,0-7.16Z" /><path class="cls-1" d="M52.11,4.21c1-2,.18-2.77-1.79-1.79L3.48,25.84c-2,1-2,2.6,0,3.58L50.32,52.84c2,1,2.77.18,1.79-1.79L42.19,31.21a9,9,0,0,1,0-7.16Z" /></g></g>
-            </svg>
-        </div>-->
+                    <div id="sidebar_expander" class="side_bar_menu_item sidebar_expander-expanded  ui_control_item" onclick="SwitchSideBarView()">
+                        <div class="side_bar_menu_icon">
+                            <input checked="true" id="sidebar_checkbox" type="checkbox">
+                            <svg width=19 fill=none xmlns="http://www.w3.org/2000/svg" viewBox="-3 0 54.53 55.26">
+                                <defs>
+                                    <style>
+                                        .cls-1 {
+                                            fill: none;
+                                            stroke: #000;
+                                            stroke-miterlimit: 10;
+                                            stroke-width: 4px;
+                                        }
+                                    </style>
+                                </defs>
+                                <g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path d="M52.11,4.21c1-2,.18-2.77-1.79-1.79L3.48,25.84c-2,1-2,2.6,0,3.58L50.32,52.84c2,1,2.77.18,1.79-1.79L42.19,31.21a9,9,0,0,1,0-7.16Z" /><path class="cls-1" d="M52.11,4.21c1-2,.18-2.77-1.79-1.79L3.48,25.84c-2,1-2,2.6,0,3.58L50.32,52.84c2,1,2.77.18,1.79-1.79L42.19,31.21a9,9,0,0,1,0-7.16Z" /></g></g>
+                            </svg>
+                        </div>-->
                     @*<span class="side_bar_menu_item_title">Скрыть</span>*@
                     <!--</div>
-    </li>-->
+                    </li>-->
                 </ol>
             </nav>
         </div>
@@ -174,30 +176,29 @@
         </div>
     </div>
     <script src="~/Resources/lib/signalr/signalr.js"></script>
-<script>
+    <script>
 
-    // ----------------- SignalR -------------------------
-    function initSignalR() {
-        const connection = new signalR.HubConnectionBuilder()
-            .withUrl("/signalr")
-            .configureLogging(signalR.LogLevel.Information)
-            .build();
-        connection.start();
-        connection.serverTimeoutInMilliseconds = 1000 * 60 * 10;
-        var counter = 0;
-        connection.on("NotifyAboutNewMessage",
-            function (chatId) {
-                var newMessageCounter = document.getElementById('new_message');
-                counter = counter + 1;
-                newMessageCounter.innerText = counter;
-                if (newMessageCounter.className == "hidden")
-                    newMessageCounter.className = "new_message";
-            });
-    }
-    initSignalR();
+        // ----------------- SignalR -------------------------
+        function initSignalR() {
+            const connection = new signalR.HubConnectionBuilder()
+                .withUrl("/signalr")
+                .configureLogging(signalR.LogLevel.Information)
+                .build();
+            connection.start();
+            connection.serverTimeoutInMilliseconds = 1000 * 60 * 10;
+            var counter = 0;
+            connection.on("NotifyAboutNewMessage",
+                function (chatId) {
+                    var newMessageCounter = document.getElementById('new_message');
+                    counter = counter + 1;
+                    newMessageCounter.innerText = counter;
+                    if (newMessageCounter.className == "hidden")
+                        newMessageCounter.className = "new_message";
+                });
+        }
+        initSignalR();
 
-</script>
-    <script src="~/Resources/lib/jquery/dist/jquery.min.js"></script>
+    </script>
     <script src="~/Resources/js/index.js"></script>
     <script src="~/Resources/js/modal.js"></script>
 </body>
