--- a/Website/Views/Friends/Friends.cshtml
+++ b/Website/Views/Friends/Friends.cshtml
@@ -15,7 +15,7 @@
                 <input id="ui_friends_search_input" class="ui_control_item ui_search_input" type="text" placeholder="Искать">
             </div>
         </div>
-        <ul id="friends" class="friends">
+        <ul id="friends" class="friends" style="margin-top: 20px">
             @await Html.PartialAsync("FriendsView", Model)
         </ul>
     </div>
