--- a/Website/Views/Messenger/Base/ChatPreview.cshtml
+++ b/Website/Views/Messenger/Base/ChatPreview.cshtml
@@ -1,5 +1,4 @@
-﻿@using Website.ViewModels.Messenger.Preview.Base
-@using Website.ViewModels.Messenger.Preview
+﻿@using Website.ViewModels.Messenger.Preview
 @model Website.ViewModels.Messenger.Preview.Base.ChatPreviewViewModel
 @{
     Layout = null;
