--- a/Website/Views/Messenger/PrivateChat/PrivateChatPreview.cshtml
+++ b/Website/Views/Messenger/PrivateChat/PrivateChatPreview.cshtml
@@ -1,5 +1,4 @@
-﻿@using Database.DAL.Entities.Messages.ChatMessage
-@using Website.ViewModels.Messenger.Preview.Base
+﻿@using Website.ViewModels.Messenger.Preview.Base
 @model Website.ViewModels.Messenger.Preview.PrivateChatPreviewViewModel
 @{ Layout = null; }
 <li id="chat-@Model.Chat.Id" class="chat" data-chat-id="@Model.Chat.Id" data-receiver-user-id="@Model.Receiver.Id">
