--- a/Website/Views/Profile/Profile.cshtml
+++ b/Website/Views/Profile/Profile.cshtml
@@ -122,7 +122,7 @@
                     <div>
                         <form asp-action="SendFriendRequest">
                             <input type="hidden" name="targetUserId" value="@profileId" />
-                            <input type="submit" value="Добавить в друзья" id="add_friend" class="profile_btn" style="width: 100%; border: none;" />
+                            <input type="submit" value="Добавить в друзья" id="add_friend" class="profile_btn" style="width: 100%; border: none; font-size: 16px" />
                         </form>
                     </div>
 
@@ -137,23 +137,32 @@
                         <div>
                             <form asp-action="RemoveFriend">
                                 <input type="hidden" name="targetUserId" value="@profileId" />
-                                <input type="submit" value="Удалить из друзей" id="add_friend" class="profile_btn" style="width: 100%; border: none;" />
+                                <input type="submit" value="Удалить из друзей" id="add_friend" class="profile_btn" style="width: 100%; border: none; font-size: 16px" />
                             </form>
                         </div>
                     }
                     else if (Model.FriendViewModel.ApplicationState == ApplicationState.outgoing)
                     {
-                        <div class="profile_btn pressed_btn">
+                        <div class="profile_btn pressed_btn" style="background: #f2f2f2;color: #323232;">
                             Заявка отправлена
                         </div>
                     }
-                    else
+                    else if(Model.FriendViewModel.ApplicationState== ApplicationState.incoming)
                     {
                         <a href="/friends/incoming">
                             <div class="profile_btn pressed_btn">
                                 Хочет добавить вас в друзья
                             </div>
                         </a>
+                    }
+                    else
+                    {
+                        <div>
+                            <form asp-action="SendFriendRequest">
+                                <input type="hidden" name="targetUserId" value="@profileId" />
+                                <input type="submit" value="Добавить в друзья" id="add_friend" class="profile_btn" style="width: 100%; border: none; font-size: 16px" />
+                            </form>
+                        </div>
                     }
                 }
             }
@@ -280,7 +289,7 @@
 
     $(document).ready(function () {
         LoadPostsEvents();
-        SearchPosts('ui_posts_search_input', profilePostsContainerId);
+        SearchPosts('ui_posts_search_input', profilePostsContainerId, '@profileId');
         OnCreatePostClick('open_post_sumbit_form');
     });
 </script>
