--- a/Website/Views/Reports/Reports.cshtml
+++ b/Website/Views/Reports/Reports.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Database.DAL.Entities.PostReport>
+﻿@model IEnumerable<Website.ViewModels.PostReportViewModel>
 <link rel="stylesheet" href="~/Resources/css/reports.css" />
 
 <div class="ui_header">
