--- a/Website/Views/Profile/Profile.cshtml
+++ b/Website/Views/Profile/Profile.cshtml
@@ -1,4 +1,5 @@
-﻿@using Website.ViewModels.Friends
+﻿
+@using Website.ViewModels.Friends
 @model Website.ViewModels.ProfileViewModel
 @{
     var queryId = Context.Request.Query["id"].ToString();
