Переписал сервис posting

--- a/Website/Views/Reports/ReportView.cshtml
+++ b/Website/Views/Reports/ReportView.cshtml
@@ -15,10 +15,10 @@
             </a>
         </div>
         <div class="report_type report_title_item">
-            @Model.reportType
+            @Model.ReportType
         </div>
         <div class="report_state report_title_item">
-            @Model.reportState
+            @Model.ReportState
         </div>
     </div>
     <div class="report_content">
@@ -27,7 +27,7 @@
                 Комментарий:
             </div>
             <div>
-                @Model.comment
+                @Model.Commentary
             </div>
         </div>
         <form asp-action="CloseReport">
