--- a/Website/Views/Modals/CreatePost.cshtml
+++ b/Website/Views/Modals/CreatePost.cshtml
@@ -1,6 +1,8 @@
-﻿@model Website.ViewModels.Profile.PostViewModel
+﻿@using Website.ViewModels.Profile
+@model Website.ViewModels.Profile.PostViewModel
 @{  
     Layout = null;
+    bool isSystem = Model is SystemPostViewModel;
 }
 <div class="modal_background close-modal">
 </div>
@@ -9,10 +11,19 @@
         <i class='bx bx-x'></i>
     </div>
 
-    <h1 class="modal_title">Создать новый пост</h1>
-    <input asp-for="Title" class="ui_control_item" style="width: 100%; padding: 12px;" placeholder="Заголовок" />
-    <textarea asp-for="Description" class="ui_control_item" style="width: 100%; height: 80px; min-height: 80px; height: auto; margin-top: 20px; padding: 12px; resize: vertical" placeholder="Текст"></textarea>
-
-    <input id="create_post_btn" class="modal_button" style="margin-top: 20px;" type="submit" value="Создать" />
+    <h1 class="modal_title">Создать новый пост</h1>@if (isSystem)
+    {
+        <form asp-action="UploadPost" asp-controller="News">
+            <input asp-for="Title" class="ui_control_item" style="width: 100%; padding: 12px;" placeholder="Заголовок" />
+            <textarea asp-for="Description" class="ui_control_item" style="width: 100%; height: 80px; min-height: 80px; height: auto; margin-top: 20px; padding: 12px; resize: vertical" placeholder="Текст"></textarea>
+            <input id="create_post_btn" class="modal_button" style="margin-top: 20px;" type="submit" value="Создать" />
+        </form>
+    }
+    else
+    {
+        <input asp-for="Title" class="ui_control_item" style="width: 100%; padding: 12px;" placeholder="Заголовок" />
+        <textarea asp-for="Description" class="ui_control_item" style="width: 100%; height: 80px; min-height: 80px; height: auto; margin-top: 20px; padding: 12px; resize: vertical" placeholder="Текст"></textarea>
+        <input id="create_post_btn" class="modal_button" style="margin-top: 20px;" type="submit" value="Создать" />
+    }
 </div>
 
