--- a/Website/wwwroot/Resources/css/profile.css
+++ b/Website/wwwroot/Resources/css/profile.css
@@ -278,7 +278,16 @@
     list-style: none;
 }
 
-
+#remove_btn {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 10px;
+    opacity: .4;
+}
+#remove_btn:hover {
+        opacity: 1;
+    }
 #upload_btn {
     position: absolute;
     bottom: 0;
